--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     background-color: rgb(230, 240, 240);
     padding: 10px;
 }
+.lk{
+    background-color: yellow;
+    padding: 10px;
+}
 
 #sb
 {
