--- a/style.css
+++ b/style.css
@@ -61,11 +61,18 @@ float:right;
     padding-top: 10px;
     padding-left: 15px;
 }
-@media(max-width:600px)
+@media(max-width:820px)
 {
     .text-box
     {
-        height:30vh;
+        height:27vh;
+    }
+}
+@media(max-width:400px)
+{
+    .text-box
+    {
+        height:35vh;
     }
 }
 #y
